k8s-inactive/hola-modules-deployment.yaml
---
# apiVersion: v1
# kind: Service # Type of kubernetes resource
# metadata:
#   name: hola-modules-service # Name of the resource
# spec:
#   type: NodePort # A port is opened on each node in your cluster via Kube proxy.
#   ports: # Take incoming HTTP requests on port 1234 and forward them to the targetPort of 80
#     - name: hola-modules-http
#       port: 1234
#       targetPort: 80
#   selector:
#     app: hola-modules # Map any pod with label `app=go-hello-world` to this service
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hola-modules-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 1234
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hola-modules
spec:
  hosts:
    - "*"
  gateways:
    - hola-modules-gateway
  http:
    - route:
        - destination:
            host: hola-modules # Name of Service object
            subset: v5 # Required if you're using versions!
            port:
              number: 1234
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hola-modules
spec:
  host: hola-modules
  subsets:
    - name: v5
      labels:
        version: v5
---
apiVersion: v1
kind: Service
metadata:
  name: hola-modules
  labels:
    app: hola-modules
spec:
  type: ClusterIP
  selector:
    app: hola-modules
  ports:
    - name: http
      port: 1234
      protocol: TCP
      targetPort: 80
